Sun Nov 29 19:56:38 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: Fix row number return for cursors

Fri Nov 27 19:01:33 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c src/odbc/unittests/describecol.in:
	- Fix SQL_GUID length

Fri Nov 27 17:15:36 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/getdata.c:
	- Fix SQLGetData from fixed to CHAR not returning always
	  SQL_SUCCESS

Thu Nov 26 10:46:01 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h include/tds.h src/ctlib/ct.c src/tds/config.c:
	* src/tds/login.c src/tds/mem.c:
	- Move server_addr into ctlib

Thu Nov 26 10:06:51 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/tds_checks.c:
	* src/tds/tds_checks.h src/tds/token.c:
	- Fix univarchar in Sybase servers

Tue Nov 24 16:48:17 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: small optimization

Mon Nov 23 12:30:27 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/msvc6/libTDS.dsp: Add bulk.c to msvc6 project file

Mon Nov 23 09:48:23 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/dblib/bcp.c:
	- Use strtok_r instead of strtok to be more thread safe

Sun Nov 22 16:46:00 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/tds/config.c src/tds/mem.c
	- No error if valid DNS name not in freetds.conf. 
	- Better reporting of server name on login failure. 

Thu Nov 19 09:44:19 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix SQLColAttributes for ODBC 2 clients

Thu Nov 19 09:32:38 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: fix typo in config.c

Fri Nov  6 08:49:07 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c:
	- Fix compatibility problem with "server:port" syntax

Fri Oct 23 15:12:16 EDT 2009	JK Lowden <jklowden@freetds.org>