@@ -1,3 +1,6 @@
+Sun Nov 29 20:02:37 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/data.c: Test univarchar from server
+
 Sun Nov 29 19:56:38 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/odbc.c: Fix row number return for cursors
 
@@ -1929,4 +1932,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2892 2009-11-29 18:56:47 freddy77 Exp $
+$Id: ChangeLog,v 1.2893 2009-11-29 19:02:45 freddy77 Exp $
